# libripgrep_example

./: Cargo.toml  README.md
crates/grep/: Cargo.toml
crates/grep-matcher/src/: lib.rs
crates/grep-printer/: Cargo.toml
crates/grep-printer/src/: json.rs  lib.rs  standard.rs  summary.rs  util.rs
crates/grep-regex/src/: config.rs  matcher.rs
crates/grep-searcher/: Cargo.toml
crates/grep-searcher/src/: line_buffer.rs  lines.rs  sink.rs
crates/grep-searcher/src/searcher/: core.rs  mmap.rs  mod.rs
src/: main.rs
